--- a/content/publication/radoglou2020aries/cite.bib
+++ b/content/publication/radoglou2020aries/cite.bib
@@ -1,10 +1,10 @@
-@article{millar2012distributed,
-  title={Distributed hash tables for peer-to-peer mobile ad-hoc networks with security extensions},
-  author={Millar, Grant P and Panaousis, Emmanouil A and Politis, Christos},
-  journal={Journal of Networks},
-  volume={7},
-  number={2},
-  pages={288},
-  year={2012},
-  publisher={Academy Publisher}
+@article{radoglou2020aries,
+  title={ARIES: A Novel Multivariate Intrusion Detection System for Smart Grid},
+  author={Radoglou Grammatikis, Panagiotis and Sarigiannidis, Panagiotis and Efstathopoulos, Georgios and Panaousis, Emmanouil},
+  journal={Sensors},
+  volume={20},
+  number={18},
+  pages={5305},
+  year={2020},
+  publisher={Multidisciplinary Digital Publishing Institute}
 }
