--- a/content/publication/farao2020secondo/cite.bib
+++ b/content/publication/farao2020secondo/cite.bib
@@ -1,10 +1,8 @@
-@article{lu2019quantum,
-  title={Quantum-Resistant Identity-Based Signature with Message Recovery and Proxy Delegation},
-  author={Lu, Xiuhua and Wen, Qiaoyan and Yin, Wei and Liang, Kaitai and Jin, Zhengping and Panaousis, Emmanouil and Chen, Jiageng},
-  journal={Symmetry},
-  volume={11},
-  number={2},
-  pages={272},
-  year={2019},
-  publisher={Multidisciplinary Digital Publishing Institute}
+@inproceedings{farao2020secondo,
+  title={SECONDO: A Platform for Cybersecurity Investments and Cyber Insurance Decisions},
+  author={Farao, Aristeidis and Panda, Sakshyam and Menesidou, Sofia Anna and Veliou, Entso and Episkopos, Nikolaos and Kalatzantonakis, George and Mohammadi, Farnaz and Georgopoulos, Nikolaos and Sirivianos, Michael and Salamanos, Nikos and others},
+  booktitle={International Conference on Trust and Privacy in Digital Business},
+  pages={65--74},
+  year={2020},
+  organization={Springer}
 }
