--- a/content/publication/ehtisham2011performance/cite.bib
+++ b/content/publication/ehtisham2011performance/cite.bib
@@ -1,10 +1,10 @@
-@article{millar2012distributed,
-  title={Distributed hash tables for peer-to-peer mobile ad-hoc networks with security extensions},
-  author={Millar, Grant P and Panaousis, Emmanouil A and Politis, Christos},
-  journal={Journal of Networks},
-  volume={7},
-  number={2},
-  pages={288},
-  year={2012},
-  publisher={Academy Publisher}
+@article{ehtisham2011performance,
+  title={Performance evaluation of secure video transmission over wimax},
+  author={Ehtisham, Farrukh and Panaousis, Emmanouil A and Politis, Christos},
+  journal={International Journal of Computer Networks \& Communications},
+  volume={3},
+  number={6},
+  pages={131},
+  year={2011},
+  publisher={Academy \& Industry Research Collaboration Center (AIRCC)}
 }
