--- a/content/publication/he2019new/cite.bib
+++ b/content/publication/he2019new/cite.bib
@@ -1,9 +1,9 @@
-@article{xu2019dt,
-  title={DT-CP: A double-TTPs-based contract-signing protocol with lower computational cost},
-  author={Xu, Guangquan and Zhang, Yao and Jiao, Litao and Panaousis, Emmanouil and Liang, Kaitai and Wang, Hao and Li, Xiaotong},
+@article{he2019new,
+  title={A new encrypted data switching Protocol: Bridging IBE and ABE without loss of data confidentiality},
+  author={He, Kai and Mao, Yijun and Ning, Jianting and Liang, Kaitai and Huang, Xinyi and Panaousis, Emmanouil and Loukas, George},
   journal={IEEE Access},
   volume={7},
-  pages={174740--174749},
+  pages={50658--50668},
   year={2019},
   publisher={IEEE}
 }
