--- a/content/publication/chronopoulos2017options/cite.bib
+++ b/content/publication/chronopoulos2017options/cite.bib
@@ -1,10 +1,9 @@
-@article{lu2019quantum,
-  title={Quantum-Resistant Identity-Based Signature with Message Recovery and Proxy Delegation},
-  author={Lu, Xiuhua and Wen, Qiaoyan and Yin, Wei and Liang, Kaitai and Jin, Zhengping and Panaousis, Emmanouil and Chen, Jiageng},
-  journal={Symmetry},
-  volume={11},
-  number={2},
-  pages={272},
-  year={2019},
-  publisher={Multidisciplinary Digital Publishing Institute}
+@article{chronopoulos2017options,
+  title={An options approach to cybersecurity investment},
+  author={Chronopoulos, Michail and Panaousis, Emmanouil and Grossklags, Jens},
+  journal={IEEE Access},
+  volume={6},
+  pages={12175--12186},
+  year={2017},
+  publisher={IEEE}
 }
