--- a/content/publication/fielder2018risk/cite.bib
+++ b/content/publication/fielder2018risk/cite.bib
@@ -1,10 +1,10 @@
-@article{lu2019quantum,
-  title={Quantum-Resistant Identity-Based Signature with Message Recovery and Proxy Delegation},
-  author={Lu, Xiuhua and Wen, Qiaoyan and Yin, Wei and Liang, Kaitai and Jin, Zhengping and Panaousis, Emmanouil and Chen, Jiageng},
-  journal={Symmetry},
-  volume={11},
+@article{fielder2018risk,
+  title={Risk assessment uncertainties in cybersecurity investments},
+  author={Fielder, Andrew and K{\"o}nig, Sandra and Panaousis, Emmanouil and Schauer, Stefan and Rass, Stefan},
+  journal={Games},
+  volume={9},
   number={2},
-  pages={272},
-  year={2019},
+  pages={34},
+  year={2018},
   publisher={Multidisciplinary Digital Publishing Institute}
 }
