--- a/content/publication/heartfield2020self/cite.bib
+++ b/content/publication/heartfield2020self/cite.bib
@@ -1,6 +1,6 @@
-@article{theodorakopoulos2020fly,
-  title={On-the-fly privacy for location histograms},
-  author={Theodorakopoulos, George and Panaousis, Emmanouil and Liang, Kaitai and Loukas, George},
+@article{heartfield2020self,
+  title={Self-configurable cyber-physical intrusion detection for smart homes using reinforcement learning},
+  author={Heartfield, Ryan and Loukas, George and Bezemskij, Anatolij and Panaousis, Emmanouil},
   journal={IEEE Transactions on Dependable and Secure Computing},
   year={2020},
   publisher={IEEE}
