--- a/content/publication/panaousis2008optimising/cite.bib
+++ b/content/publication/panaousis2008optimising/cite.bib
@@ -1,7 +1,8 @@
-@inproceedings{panaousis2009game,
-  title={A Game Theoretic Approach for Securing AODV in Emergency Mobile Ad Hoc Networks},
-  author={Panaousis, Emmanouil A and Politis, Christos},
-  booktitle={IEEE 34th Conference on Local Computer Networks (LCN)},
-  year={2009},
+@inproceedings{panaousis2008optimizing,
+  title={Optimizing the channel load reporting process in IEEE 802.11 k-enabled WLANs},
+  author={Panaousis, Emmanuel A and Frangoudis, Pantelis A and Ververidis, Christopher N and Polyzos, George C},
+  booktitle={2008 16th IEEE Workshop on Local and Metropolitan Area Networks},
+  pages={37--42},
+  year={2008},
   organization={IEEE}
 }
