--- a/content/publication/mavropoulos2017asto/cite.bib
+++ b/content/publication/mavropoulos2017asto/cite.bib
@@ -1,9 +1,8 @@
-@article{mavropoulos2017conceptual,
-  title={A conceptual model to support security analysis in the internet of things},
-  author={Mavropoulos, Orestis and Mouratidis, Haralambos and Fish, Andrew and Panaousis, Emmanouil and Kalloniatis, Christos},
-  journal={Computer Science and Information Systems},
-  volume={14},
-  number={2},
-  pages={557--578},
-  year={2017}
+@inproceedings{mavropoulos2017asto,
+  title={ASTo: A tool for security analysis of IoT systems},
+  author={Mavropoulos, Orestis and Mouratidis, Haralambos and Fish, Andrew and Panaousis, Emmanouil},
+  booktitle={2017 IEEE 15th International Conference on Software Engineering Research, Management and Applications (SERA)},
+  pages={395--400},
+  year={2017},
+  organization={IEEE}
 }
