--- a/content/publication/panaousis2014cybersecurity/cite.bib
+++ b/content/publication/panaousis2014cybersecurity/cite.bib
@@ -1,8 +1,8 @@
-@inproceedings{laszka2018cyber,
-  author={Aron Laszka and Emmanouil Panaousis and Jens Grossklags},
-  title={Cyber-Insurance as a Signaling Game: Self-Reporting and External Security Audits},
-  booktitle={9th Conference on Decision and Game Theory for Security (GameSec)},
-  pages={508--520},
-  year={2018},
-  month={October},
+@inproceedings{panaousis2014cybersecurity,
+  title={Cybersecurity games and investments: A decision support approach},
+  author={Panaousis, Emmanouil and Fielder, Andrew and Malacaria, Pasquale and Hankin, Chris and Smeraldi, Fabrizio},
+  booktitle={International Conference on Decision and Game Theory for Security},
+  pages={266--286},
+  year={2014},
+  organization={Springer}
 }
