IEEE Transactions on Information Forensics and Security

--- a/content/publication/heartfield2020self/cite.bib
+++ b/content/publication/heartfield2020self/cite.bib
@@ -1,7 +1,7 @@
 @article{heartfield2020self,
   title={Self-configurable cyber-physical intrusion detection for smart homes using reinforcement learning},
   author={Heartfield, Ryan and Loukas, George and Bezemskij, Anatolij and Panaousis, Emmanouil},
-  journal={IEEE Transactions on Dependable and Secure Computing},
+  journal={IEEE Transactions on Information Forensics and Security},
   year={2020},
   publisher={IEEE}
 }
