--- a/content/publication/scott2022optimising/cite.bib
+++ b/content/publication/scott2022optimising/cite.bib
@@ -1,10 +1,6 @@
-@article{zhao2022practical,
-  title={Practical algorithm substitution attack on extractable signatures},
-  author={Zhao, Yi and Liang, Kaitai and Zhao, Yanqi and Yang, Bo and Ming, Yang and Panaousis, Emmanouil},
-  journal={Designs, Codes and Cryptography},
-  volume={90},
-  number={4},
-  pages={921--937},
+@article{scott2022optimising,
+  title={Optimising user security recommendations for AI-powered smart-homes},
+  author={Scott, Emma and Panda, Sakshyam and Loukas, George and Panaousis, Emmanouil},
   year={2022},
-  publisher={Springer}
+  publisher={IEEE}
 }
