small letters in publications

--- a/content/publication/mavropoulos2016apparatus/cite.bib
+++ b/content/publication/mavropoulos2016apparatus/cite.bib
@@ -1,5 +1,5 @@
 @inproceedings{mavropoulos2016apparatus,
-  title={Apparatus: Reasoning about security requirements in the internet of things},
+  title={Apparatus: reasoning about security requirements in the internet of things},
   author={Mavropoulos, Orestis and Mouratidis, Haralambos and Fish, Andrew and Panaousis, Emmanouil and Kalloniatis, Christos},
   booktitle={International Conference on Advanced Information Systems Engineering},
   pages={219--230},
