--- a/content/publication/panaousis2012secure/cite.bib
+++ b/content/publication/panaousis2012secure/cite.bib
@@ -1,5 +1,5 @@
 @inproceedings{panaousis2012secure,
-  title={Secure Decentralised Ubiquitous Networking for Emergency Eommunications},
+  title={Secure Decentralised Ubiquitous Networking for Emergency Communications},
   author={Panaousis, Emmanouil A and Ramrekha, Tipu A and Politis, Christos and Millar, Grant P},
   booktitle={2012 International Conference on Telecommunications and Multimedia (TEMU)},
   pages={233--238},
