--- a/content/publication/panda2022honeycar/cite.bib
+++ b/content/publication/panda2022honeycar/cite.bib
@@ -1,10 +1,7 @@
-@article{panda2019post,
-  author={Sakshyam Panda and Daniel W. Woods and Aron Laszka and Andrew Fielder and Emmanouil Panaousis},
-  title={Post-Incident Audits on Cyber Insurance Discounts},
-  journal={Computers & Security},
-  volume={87},
-  publisher={Springer},
-  pages={101593},
-  year={2019},
-  month={November},
+@article{panda2022honeycar,
+  title={HoneyCar: A Framework to Configure Honeypot Vulnerabilities on the Internet of Vehicles},
+  author={Panda, Sakshyam and Rass, Stefan and Moschoyiannis, Sotiris and Liang, Kaitai and Loukas, George and Panaousis, Emmanouil},
+  journal={IEEE Access},
+  year={2022},
+  publisher={IEEE}
 }
