vast changes during the weekend

--- a/content/publication/theodorakopoulos2020fly/cite.bib
+++ b/content/publication/theodorakopoulos2020fly/cite.bib
@@ -2,6 +2,8 @@
   title={On-the-fly privacy for location histograms},
   author={Theodorakopoulos, George and Panaousis, Emmanouil and Liang, Kaitai and Loukas, George},
   journal={IEEE Transactions on Dependable and Secure Computing},
-  year={2020},
+  volume={19},
+  issue={1},
+  year={2022},
   publisher={IEEE}
 }
